<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XXX22</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="app_settings">Настройки</string>
    <string name="app_search">Поиск</string>
    <string name="app_media">Медиатека</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/profile/android-developer/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="my_mail">smrbanker@gmail.com</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="test_player">00:00</string>
    <string name="longtext">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="favourite_playlist">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="go_out">Завершить создание плейлиста?</string>
    <string name="lost_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel_button">Отмена</string>
    <string name="end_button">Завершить</string>
    <string name="add_playlist">Добавить в плейлист</string>

</resources>