<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_back"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings"
        style="@style/SettingsScreenFrame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/app_settings"
            android:textColor="@color/set_font"
            android:textFontWeight="500"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <FrameLayout
            style="@style/SettingsScreenFrame"
            android:layout_height="match_parent">

            <TextView
                style="@style/SettingsScreenText"
                android:text="@string/black_theme" />

            <Switch
                android:id="@+id/themeSwitcher"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/white"
                android:thumbTint="@color/switch_thumb_color"
                android:trackTint="@color/switch_track_color"/>

            <!--com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:text="@string/black_theme"
                android:layout_marginHorizontal="60dp"
                android:layout_gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/-->

        </FrameLayout>

        <FrameLayout
            style="@style/SettingsScreenFrame">

            <TextView
                style="@style/SettingsScreenText"
                android:text="@string/share"/>

            <ImageView
                android:id="@+id/share_button"
                style="@style/SettingsScreenImage"
                android:src="@drawable/icon_share_"/>
        </FrameLayout>
        <!--com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_share_"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            android:text="@string/share"
            android:textSize="16sp"
            android:textColor="@color/black"/-->

        <FrameLayout
            style="@style/SettingsScreenFrame">

            <TextView
                style="@style/SettingsScreenText"
                android:text="@string/support"/>

            <ImageView
                android:id="@+id/support_button"
                style="@style/SettingsScreenImage"
                android:src="@drawable/icon_support_"/>
        </FrameLayout>
        <FrameLayout
            style="@style/SettingsScreenFrame">

            <TextView
                style="@style/SettingsScreenText"
                android:text="@string/agreement"/>

            <ImageView
                android:id="@+id/agreement_button"
                style="@style/SettingsScreenImage"
                android:src="@drawable/icon_right_"/>
            </FrameLayout>
    </LinearLayout>

</LinearLayout>