<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/create_playlist"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.practicum.xxx22.media.ui.create.MediaCreatePlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:id="@+id/layout_title"
            tools:ignore="MissingConstraints">

            <ImageButton android:id="@+id/back_button"
                android:src="@drawable/icon_left_"
                android:contentDescription="@string/new_playlist"
                android:layout_gravity="center_vertical"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_vertical" />

            <TextView android:id="@+id/title_screen"
                android:text="@string/new_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/ys_display_medium"
                android:fontWeight="500"
                android:textSize="22sp"
                android:textColor="@color/set_font"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/image_border_playlist"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/placeholder_playlist"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title"
            app:shapeAppearanceOverlay="@style/PlaylistImage"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,VisualLintBounds" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image"
            android:hint="@string/playlist_name"
            style="@style/PlaylistCreateText"
            tools:ignore="VisualLintBounds">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/PlaylistCreateEdit"
                android:id="@+id/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:colorControlActivated="@color/blue"
                android:fontFamily="@font/ys_display_regular"
                android:fontWeight="400"
                android:textSize="16sp"
                android:textColor="@color/set_font"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name"
            android:hint="@string/playlist_description"
            android:colorControlActivated="@color/blue"
            style="@style/PlaylistCreateText"
            tools:ignore="VisualLintBounds">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hint_description"
                style="@style/PlaylistCreateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:fontWeight="400"
                android:textSize="16sp"
                android:textColor="@color/set_font"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createPlaylistButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/selector_button"
            android:elevation="0dp"
            android:fontFamily="@font/ys_display_medium"
            android:fontWeight="500"
            android:textSize="16sp"
            android:letterSpacing="0"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>