<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_back"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.practicum.playlistmaker.search.ui.SearchFragment">

    <LinearLayout
        android:id="@+id/settings"
        style="@style/SettingsScreenFrame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/app_search"
            android:textColor="@color/set_font"
            android:textFontWeight="500"
            android:textSize="22sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:drawableStart="@drawable/edit_search_"
            android:drawablePadding="10dp"
            android:hint="@string/app_search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/set_font_edit"
            android:textColorHint="@color/search_edit_text"
            android:textCursorDrawable="@color/search_cursor"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/search_button_visible"
            style="@style/SearchClose"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone" />

    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/search_image_not_found"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="102dp"
            android:src="@drawable/not_found"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/search_image_wrong"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="102dp"
            android:src="@drawable/wrong"
            android:visibility="gone" />

        <TextView android:id="@+id/search_text_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="238dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/search_not_found"
            android:fontFamily="@font/ys_display_medium"
            tools:text="@string/something_went_wrong"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button_wrong"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            app:cornerRadius="54dp"
            android:visibility="gone"
            android:backgroundTint="@color/search_not_found"
            app:icon="@drawable/label" />

    </FrameLayout>
    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/SettingsScreenFrame"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_history"
            android:textColor="@color/set_font"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button_clear"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            app:cornerRadius="54dp"
            android:backgroundTint="@color/search_not_found"
            app:icon="@drawable/history" />
    </LinearLayout>

</LinearLayout>
